self-managed/local/api-gw/routes-public-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: http-route-2
  namespace: consul
spec:
  # Defines the gateway listener.
  parentRefs:
  - name: api-gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: public-api
      namespace: default
      port: 8080

# NOTE: Service Intention "public-api" needs patching (allow access from api-gateway)
# spec:
#   destination:
#     name: public-api
#   sources:
#   - action: allow
#     name: nginx
#   - action: allow
#     name: api-gateway
